<?xml version="1.0" encoding="utf-8"?>
<!--
@author Wenxin Li
@Student No. 040941091
@date Mar 30, 2024
@labSecNo. 021
@purpose It manages the format for recipe menue
-->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:title="@string/recipe_search"
        android:icon="@drawable/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/recipe_saved_icon"
        android:icon="@drawable/saved_list"
        android:title="@string/recipe_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/help"

        android:title="@string/recipe_help"
        app:showAsAction="never" />


</menu>