...
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/inDetailSourceURL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailImage">

        <TextView
            android:id="@+id/inDeatilSuammry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
...
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ScrollView" />

    <Button
        android:id="@+id/recipeSaveButton"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:backgroundTint="#E6D435"
        android:text="@string/recipe_save"
        android:textSize="20sp"
        android:textStyle="bold"
...
